force-app/main/default/objects/Income_Card_Payment_History__c/Income_Card_Payment_History__c.object-meta.xml
<CustomObject>
    <label>Card Payment History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Income Card Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Payment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>