force-app/main/default/objects/Income_Card_Payment_History__c/fields/Authorisation_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Code__c</fullName>
    <label>Authorisation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>