force-app/main/default/objects/Income_Card_Payment_History__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <formula>IF( AND( OR(ISPICKVAL(Transaction_Type__c, &quot;Sale&quot;), ISPICKVAL(Transaction_Type__c, &quot;Authorised&quot;) ) , Payment_Status__c = &quot;Successful&quot; ), Amount__c , if ( AND(ISPICKVAL(Transaction_Type__c, &quot;Deferred Released&quot;), Payment_Status__c = &quot;Successful&quot;), Amount__c , if (AND (ISPICKVAL(Transaction_Type__c, &quot;Refund&quot;) || ISPICKVAL(Transaction_Type__c, &quot;Void&quot;), Payment_Status__c = &quot;Successful&quot; ), -Amount__c ,0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>