force-app/main/default/objects/Income_Card_Payment_History__c/fields/Customer_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Reference__c</fullName>
    <label>Customer Payment Reference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>