force-app/main/default/objects/Income_Card_Payment_History__c/fields/Income_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Income_Card_Payment__c</fullName>
    <label>Income Card Payment</label>
    <referenceTo>Income_Card_Payment__c</referenceTo>
    <relationshipName>Income_Card_Payment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>