force-app/main/default/objects/Income_Card_Payment_History__c/fields/Internal_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payment_Description__c</fullName>
    <label>Internal Payment Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>