force-app/main/default/objects/Income_Card_Payment_History__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipName>Income_Card_Payment_History</relationshipName>
    <type>Lookup</type>
</CustomField>