force-app/main/default/objects/Income_Card_Payment_History__c/fields/Payment_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Details__c</fullName>
    <label>Payment Status Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>