force-app/main/default/objects/Income_Card_Payment_History__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>