force-app/main/default/objects/Income_Card_Payment_History__c/fields/SagePay_Vendor_Tx_Code__c.field-meta.xml
<CustomField>
    <fullName>SagePay_Vendor_Tx_Code__c</fullName>
    <label>SagePay Vendor Tx Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>