force-app/main/default/objects/Income_Card_Payment_History__c/fields/Security_Key__c.field-meta.xml
<CustomField>
    <fullName>Security_Key__c</fullName>
    <label>Security Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>