force-app/main/default/objects/Income_Card_Payment_History__c/fields/Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amount__c</fullName>
    <label>Surcharge Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>