force-app/main/default/objects/Income_Card_Payment_History__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>