force-app/main/default/objects/Income_Card_Payment_History__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>