force-app/main/default/objects/Income_Card_Payment_History__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Deferred Released</fullName>
            </value>
            <value>
                <fullName>Deferred Aborted</fullName>
            </value>
            <value>
                <fullName>Authenticate</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>