force-app/main/default/objects/Income_Card_Payment_History__c/recordTypes/Bank_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Bank_Transfer</fullName>
    <active>true</active>
    <description>Bank Transfer Payments</description>
    <label>Bank Transfer</label>
</RecordType>