force-app/main/default/objects/Income_Card_Payment_History__c/recordTypes/Card_Payment.recordType-meta.xml
<RecordType>
    <fullName>Card_Payment</fullName>
    <active>true</active>
    <label>Card Payment</label>
</RecordType>