force-app/main/default/objects/Income_Card_Payment_History__c/recordTypes/Cheque.recordType-meta.xml
<RecordType>
    <fullName>Cheque</fullName>
    <active>true</active>
    <label>Cheque</label>
</RecordType>